k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dwpg
  labels:
    app.kubernetes.io/name: dwpg-simulator
    app.kubernetes.io/part-of: secure-software-engineering
    course: 24cys401
