k8s/08-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwpg-frontend
  namespace: dwpg
  labels:
    app: dwpg-frontend
    tier: ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dwpg-frontend
  template:
    metadata:
      labels:
        app: dwpg-frontend
        tier: ui
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
      containers:
        - name: frontend
          image: sathvikvalivety/dwpg-frontend:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-ui
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
