k8s/05-mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwpg-mariadb-service
  namespace: dwpg
  labels:
    app: dwpg-mariadb
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
  selector:
    app: dwpg-mariadb
