k8s/09-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwpg-frontend-service
  namespace: dwpg
  labels:
    app: dwpg-frontend
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
      name: http
  selector:
    app: dwpg-frontend
